@@ -1,3 +1,4 @@
+5/28/12 replace LinearFunction with dot.Util.linear
 5/28/13 add concentration display (has title layout problem)
 5/28/13 workaround for layout of invisible SaturatedIndicator, due to change in semantics of scenery bounds
 5/24/13 fix lint errors
